<resources>
    <!--activity code input-->
    <string name="app_name">Sample</string>
    <string name="action_settings">Settings</string>
    <string name="enter_code">Enter Student or Classroom Code:</string>
    <string name="or">OR</string>
    <string name="scan_code">Scan Code</string>
    <string name="code">myStudent12345</string>

    <string name="email">Email/User Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Address</string>
    <string name="userid">User Type</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Click here to log in .</string>
    <string name="registered_emailid">Please enter your Registered Email Id if you are a parent or a teacher. If you are a student, ask your parent or your teacher to update password:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="teacher">teacher</string>
    <string name="parent">parent</string>
    <string name="student">student</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="next">Next</string>
    <string name="close_on_intent_error">Error</string>
    <string name="classroom_information">Classroom Infomation</string>
    <string name="type_in_classroom_name_here">Class Room Name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="announcement">Announcement</string>
    <string name="messages_will_be_sent_to_all_parents">Messages will be sent to all parents</string>

    <string-array name="evaluations_array">
        <item>Excellent</item>
        <item>Good</item>
        <item>Fair</item>
        <item>Needs Improvement</item>
    </string-array>

    <string-array name="pts_array">
        <item>0</item>
        <item>1 </item>
        <item>5</item>
        <item>10</item>
        <item>20 </item>
        <item>50 </item>
    </string-array>
</resources>
